feat: add light/dark favicon, actually check and show email verification page,
